--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -10,56 +10,100 @@
 ;==========================================================
 
 [colors]
-;background = ${xrdb:color0:#222}
-background = #00000000
+background = #1A0D2A
 background-alt = #444
-;foreground = ${xrdb:color7:#222}
-foreground = #ccffffff
+foreground = #C1C1C1
 foreground-alt = #555
 primary = #ffb52a
-secondary = #e60053
+secondary = #a22335
 alert = #bd2c40
 
-[bar/top]
+;===========================
+;=           poly          =
+;===========================
+
+[bar/poly]
+
 monitor = ${env:MONITOR:eDP1}
+
+; Dimensions
 width = 100%
 height = 27
 
+; Background color
 background = ${colors.background}
+
+; Foreground color
 foreground = ${colors.foreground}
 
-spacing = 2
-padding = 2
+; Extra Space between elements
+spacing = 0
+
+; Padding
+padding = 1
+
+; Rounded corners
+radius = 0.0
+
+; Margin for each module
 module-margin = 2
 
-font-0 = Roboto:pixelsize=10;1
-;font-0 = Hack NF Regular:pixelsize=10;1
-font-1 = Font Awesome 5 Free:pixelsize=10;0
-font-2 = Font Awesome 5 Free Solid:pixelsize=10;0
+
+
+; Fonts
+font-0 = Noto Sans:pixelsize=10;weight=bold;1
+font-1 = Font Awesome 5 Free:pixelsize=12;0
+font-2 = Font Awesome 5 Free Solid:pixelsize=12;weight=bold;0
 font-3 = Font Awesome 5 Brands:pixelsize=10;0
 
+; Enable modules in bar blocks
 modules-left = i3
-modules-center = date
-modules-right = xkeyboard pulseaudio  temperature
+modules-center =  date
+modules-right =  xkeyboard pulseaudio battery eth
 
+;#!!#!#!#
+;#!!#!#!# System tray
 
+; System tray position
 tray-position = right
-tray-padding = 20
-tray-background = #000000
+
+; System tray padding
+tray-padding = 2
+
+; System tray background
+;tray-background = #000000
+
+; Tray offset defined as pixel value
 tray-offset-x = 0
+tray-offset-y = 0
+
+;Tray icon max size
+tray-maxsize = 22
+
+# Tray background transparensy
+tray-transparent = true
 
 
-[module/xwindow]
-type = internal/xwindow
-label = %title%
+####^^^^^^^^^####^^^^^^^^^####
+
+[settings]
+
+; Pseudo-transparency for the bar
+pseudo-transparency = true
+
+
+
+
+####^^^^^^^^^####^^^^^^^^^####
+
 
 [module/xkeyboard]
 type = internal/xkeyboard
 blacklist-0 = num lock
 
 format-prefix = " "
-format-prefix-foreground = ${colors.foreground-alt}
-format-prefix-underline = ${colors.secondary}
+;format-prefix-foreground = ${colors.foreground}
+;format-prefix-underline = ${colors.secondary}
 
 label-layout = %layout%
 label-layout-underline = ${colors.secondary}
@@ -69,321 +113,7 @@ label-indicator-margin = 1
 label-indicator-background = ${colors.secondary}
 label-indicator-underline = ${colors.secondary}
 
-[module/filesystem]
-type = internal/fs
 
-; Mountpoints to display
-mount-0 = /
-
-; Seconds to sleep between updates
-; Default: 30
-interval = 10
-
-; Display fixed precision values
-; Default: false
-fixed-values = true
-
-; Spacing between entries
-; Default: 2
-spacing = 4
-
-; Available tags:
-;   <label-mounted> (default)
-;   <bar-free>
-;   <bar-used>
-;   <ramp-capacity>
-format-mounted = <label-mounted>
-
-; Available tokens:
-;   %mountpoint%
-;   %type%
-;   %fsname%
-;   %percentage_free%
-;   %percentage_used%
-;   %total%
-;   %free%
-;   %used%
-; Default: %mountpoint% %percentage_free%%
-label-mounted =  %free%
-
-[module/i3]
-type = internal/i3
-
-; Only show workspaces defined on the same output as the bar
-;
-; Useful if you want to show monitor specific workspaces
-; on different bars
-;
-; Default: false
-pin-workspaces = true
-
-; This will split the workspace name on ':'
-; Default: false
-strip-wsnumbers = true
-
-; Sort the workspaces by index instead of the default
-; sorting that groups the workspaces by output
-; Default: false
-index-sort = true
-
-; Create click handler used to focus workspace
-; Default: true
-enable-click = true
-
-; Create scroll handlers used to cycle workspaces
-; Default: true
-enable-scroll = false
-
-; Wrap around when reaching the first/last workspace
-; Default: true
-wrapping-scroll = false
-
-; Set the scroll cycle direction
-; Default: true
-reverse-scroll = false
-
-; Use fuzzy (partial) matching on labels when assigning
-; icons to workspaces
-; Example: code;♚ will apply the icon to all workspaces
-; containing 'code' in the label
-; Default: false
-fuzzy-match = true
-
-; Available tags:
-;   <label-state> (default) - gets replaced with <label-(focused|unfocused|visible|urgent)>
-;   <label-mode> (default)
-format = <label-state> <label-mode>
-
-; Available tokens:
-;   %mode%
-; Default: %mode%
-label-mode = %mode%
-label-mode-padding = 2
-label-mode-background = #e60053
-
-; Available tokens:
-;   %name%
-;   %icon%
-;   %index%
-;   %output%
-; Default: %icon%  %name%
-label-focused = %name%
-label-focused-foreground = #ffffff
-label-focused-padding = 2
-
-; Available tokens:
-;   %name%
-;   %icon%
-;   %index%
-;   %output%
-; Default: %icon%  %name%
-label-unfocused = %name%
-label-unfocused-foreground = #cccccccc
-label-unfocused-padding = 2
-
-; Available tokens:
-;   %name%
-;   %icon%
-;   %index%
-;   %output%
-; Default: %icon%  %name%
-label-visible = %name%
-label-visible-foreground = #cccccccc
-label-visible-padding = 2
-
-; Available tokens:
-;   %name%
-;   %icon%
-;   %index%
-;   %output%
-; Default: %icon%  %name%
-label-urgent = %index% %name%
-label-urgent-foreground = #ffffff
-label-urgent-background = #bd2c40
-label-urgent-padding = 4
-
-; Separator in between workspaces
-;label-separator = |
-
-[module/mpd]
-type = internal/mpd
-format-online = <label-song>  <icon-prev> <icon-stop> <toggle> <icon-next>
-
-icon-prev = 
-icon-stop = 
-icon-play = 
-icon-pause = 
-icon-next = 
-
-label-song-maxlen = 25
-label-song-ellipsis = true
-
-[module/xbacklight]
-type = internal/xbacklight
-
-; Use the following command to list available cards:
-; $ ls -1 /sys/class/backlight/
-card = intel_backlight
-
-; Available tags:
-;   <label> (default)
-;   <ramp>
-;   <bar>
-format =  <ramp> <label>
-
-; Available tokens:
-;   %percentage% (default)
-label = %percentage%%
-
-; Only applies if <ramp> is used
-ramp-0 = 
-ramp-1 = 
-ramp-2 = 
-ramp-3 = 
-ramp-4 = 
-
-; Only applies if <bar> is used
-bar-width = 10
-bar-indicator = |
-bar-indicator-foreground = #ff
-bar-fill = ─
-bar-fill-foreground = #c9665e
-bar-empty = ─
-bar-empty-foreground = #44
-
-[module/cpu]
-type = internal/cpu
-
-; Seconds to sleep between updates
-; Default: 1
-interval = 2
-
-; Available tags:
-;   <label> (default)
-;   <bar-load>
-;   <ramp-load>
-;   <ramp-coreload>
-format = <label>
-
-; Available tokens:
-;   %percentage% (default) - total cpu load
-;   %percentage-cores% - load percentage for each core
-;   %percentage-core[1-9]% - load percentage for specific core
-label =  %percentage%%
-
-ramp-coreload-0 = ▁
-ramp-coreload-0-font = 2
-ramp-coreload-0-foreground = #aaff77
-ramp-coreload-1 = ▂
-ramp-coreload-1-font = 2
-ramp-coreload-1-foreground = #aaff77
-ramp-coreload-2 = ▃
-ramp-coreload-2-font = 2
-ramp-coreload-2-foreground = #aaff77
-ramp-coreload-3 = ▄
-ramp-coreload-3-font = 2
-ramp-coreload-3-foreground = #aaff77
-ramp-coreload-4 = ▅
-ramp-coreload-4-font = 2
-ramp-coreload-4-foreground = #fba922
-ramp-coreload-5 = ▆
-ramp-coreload-5-font = 2
-ramp-coreload-5-foreground = #fba922
-ramp-coreload-6 = ▇
-ramp-coreload-6-font = 2
-ramp-coreload-6-foreground = #ff5555
-ramp-coreload-7 = █
-ramp-coreload-7-font = 2
-ramp-coreload-7-foreground = #ff5555
-
-[module/memory]
-type = internal/memory
-
-; Default: 1
-; Seconds to sleep between updates
-interval = 3
-
-; Available tags:
-;   <label> (default)
-;   <bar-used>
-;   <bar-free>
-;   <ramp-used>
-;   <ramp-free>
-format = <label>
-
-; Available tokens:
-;   %percentage_used% (default)
-;   %percentage_free%
-;   %gb_used%
-;   %gb_free%
-;   %gb_total%
-;   %mb_used%
-;   %mb_free%
-;   %mb_total%
-;   %percentage_swap_used%
-;   %percentage_swap_free%
-;   %mb_swap_total%
-;   %mb_swap_free%
-;   %mb_swap_used%
-;   %gb_swap_total%
-;   %gb_swap_free%
-;   %gb_swap_used%
-label =  %percentage_free%% %gb_used%/%gb_total%
-
-; Only applies if <bar-used> is used
-bar-used-indicator =
-bar-used-width = 30
-bar-used-foreground-0 = #aaff77
-bar-used-foreground-1 = #aaff77
-bar-used-foreground-2 = #f5a70a
-bar-used-foreground-3 = #ff5555
-bar-used-fill = ▐
-bar-used-empty = ▐
-bar-used-empty-foreground = #444444
-
-[module/wifi]
-type = internal/network
-interface = wlo1
-
-; Seconds to sleep between updates
-; Default: 1
-interval = 3.0
-
-format-connected-prefix = "  "
-
-; Available tokens:
-;   %ifname%    [wireless+wired]
-;   %local_ip%  [wireless+wired]
-;   %local_ip6% [wireless+wired]
-;   %essid%     [wireless]
-;   %signal%    [wireless]
-;   %upspeed%   [wireless+wired]
-;   %downspeed% [wireless+wired]
-;   %linkspeed% [wired]
-; Default: %ifname% %local_ip%
-;label-connected =  %essid%
-label-connected = %{A1:nm-connection-editor:}%essid%%{A}
-
-
-[module/wifi-data]
-type = internal/network
-interface = wlo1
-
-; Seconds to sleep between updates
-; Default: 1
-interval = 3.0
-
-; Available tokens:
-;   %ifname%    [wireless+wired]
-;   %local_ip%  [wireless+wired]
-;   %local_ip6% [wireless+wired]
-;   %essid%     [wireless]
-;   %signal%    [wireless]
-;   %upspeed%   [wireless+wired]
-;   %downspeed% [wireless+wired]
-;   %linkspeed% [wired]
-; Default: %ifname% %local_ip%
-label-connected =  %upspeed%   %downspeed%
 
 [module/eth]
 type = internal/network
@@ -401,36 +131,7 @@ format-disconnected =
 ;label-disconnected = %ifname% disconnected
 ;label-disconnected-foreground = ${colors.foreground-alt}
 
-[module/date]
-type = internal/date
 
-; Seconds to sleep between updates
-interval = 1.0
-
-; See "http://en.cppreference.com/w/cpp/io/manip/put_time" for details on how to format the date string
-; NOTE: if you want to use syntax tags here you need to use %%{...}
-;date = %%{F#99}%d-%m-%Y%%{F-}
-date = %Y-%m-%d%
-
-; Optional time format
-time = %%{F#fff}%H:%M%%{F-}
-
-; if `date-alt` or `time-alt` is defined, clicking
-; the module will toggle between formats
-date-alt = %%{F#fff}%A, %d %B %Y
-time-alt = %%{F#fff}%H:%M%%{F#666}:%%{F#fba922}%S%%{F-}
-
-; Available tags:
-;   <label> (default)
-;format =   <label>
-format =  <label>
-
-
-; Available tokens:
-;   %date%
-;   %time%
-; Default: %date%
-label = %date% %time%
 
 [module/pulseaudio]
 type = internal/pulseaudio
@@ -444,28 +145,17 @@ sink = @DEFAULT_SINK@
 ; Default: true
 use-ui-max = true
 
-; Interval for volume increase/decrease (in percent points) (unreleased)
-; Default: 5
+; Interval for volume increase/decrease (in percent points)
 interval = 5
 
-; Available tags:
-;   <label-volume> (default)
-;   <ramp-volume>
-;   <bar-volume>
+;   <label-volume>, <ramp-volume>, <bar-volume>
 format-volume = <ramp-volume> <label-volume>
 
-; Available tags:
-;   <label-muted> (default)
-;   <ramp-volume>
-;   <bar-volume>
-;format-muted = <label-muted>
+;   <label-volume>, <ramp-volume>, <bar-volume>, <label-muted>
+;format-muted =  <label-muted>
 
-; Available tokens:
-;   %percentage% (default)
-;label-volume = %percentage%%
+label-volume = %percentage%
 
-; Available tokens:
-;   %percentage% (default)
 label-muted =  Muted
 label-muted-foreground = #666
 
@@ -491,72 +181,6 @@ bar-volume-empty = ─
 bar-volume-empty-font = 2
 bar-volume-empty-foreground = #44
 
-[module/alsa]
-type = internal/alsa
-
-; Soundcard to be used
-; Usually in the format hw:# where # is the card number
-; You can find the different card numbers in `/proc/asound/cards`
-master-soundcard = default
-speaker-soundcard = default
-headphone-soundcard = default
-
-; Name of the master, speaker and headphone mixers
-; Use the following command to list available mixer controls:
-; $ amixer scontrols | sed -nr "s/.*'([[:alnum:]]+)'.*/\1/p"
-; If master, speaker or headphone-soundcard isn't the default,
-; use `amixer -c # scontrols` instead where # is the number
-; of the master, speaker or headphone soundcard respectively
-;
-; Default: Master
-master-mixer = Master
-
-; Optionally define speaker and headphone mixers
-; Default: none
-speaker-mixer = Speaker
-; Default: none
-headphone-mixer = Headphone
-
-; NOTE: This is required if headphone_mixer is defined
-; Use the following command to list available device controls
-; $ amixer controls | sed -r "/CARD/\!d; s/.*=([0-9]+).*name='([^']+)'.*/printf '%3.0f: %s\n' '\1' '\2'/e" | sort
-; You may also need to use `amixer -c # controls` as above for the mixer names
-; Default: none
-headphone-id = 9
-
-; Use volume mapping (similar to amixer -M and alsamixer), where the increase in volume is linear to the ear
-; Default: false
-mapped = true
-
-; Interval for volume increase/decrease (in percent points) (unreleased)
-; Default: 5
-interval = 5
-
-; Available tags:
-;   <label-volume> (default)
-;   <ramp-volume>
-;   <bar-volume>
-format-volume = <ramp-volume> <label-volume>
-
-; Available tags:
-;   <label-muted> (default)
-;   <ramp-volume>
-;   <bar-volume>
-;format-muted = <label-muted>
-
-; Available tokens:
-;   %percentage% (default)
-label-volume = %percentage%%
-
-; Available tokens:
-;   %percentage% (default)
-label-muted =  muted
-label-muted-foreground = #66
-
-; Only applies if <ramp-volume> is used
-ramp-volume-0 = 
-ramp-volume-1 = 
-ramp-volume-2 = 
 
 [module/battery]
 type = internal/battery
@@ -576,51 +200,31 @@ adapter = ACAD
 ;
 ; Disable polling by setting the interval to 0.
 ;
-; Default: 5
 poll-interval = 5
+
 ; see "man date" for details on how to format the time string
-; NOTE: if you want to use syntax tags here you need to use %%{...}
-; Default: %H:%M:%S
 time-format = %H:%M
 
-; Available tags:
-;   <label-charging> (default)
-;   <bar-capacity>
-;   <ramp-capacity>
-;   <animation-charging>
+;   <label-charging>, <bar-capacity>, <ramp-capacity>, <animation-charging>
 format-charging = <animation-charging> <label-charging>
 
-; Available tags:
-;   <label-discharging> (default)
-;   <bar-capacity>
-;   <ramp-capacity>
-;   <animation-discharging>
+=;   <label-charging>, <bar-capacity>, <ramp-capacity>, <animation-charging>
 format-discharging = <ramp-capacity>  <label-discharging>
 
-; Available tags:
-;   <label-full> (default)
-;   <bar-capacity>
-;   <ramp-capacity>
+;   <label-full>, <bar-capacity>, <ramp-capacity>
 format-full = <ramp-capacity> <label-full>
 
-; Available tokens:
-;   %percentage% (default)
-;   %time%
-;   %consumption% (shows current charge rate in watts)
+;   %percentage%, %time%, %consumption%
 ;label-charging =  %{F#99}%{F-} %percentage%%
 label-charging = %percentage%%
 
 
-; Available tokens:
-;   %percentage% (default)
-;   %time%
-;   %consumption% (shows current discharge rate in watts)
+;   %percentage%, %time%, %consumption%
 ;label-discharging = %{F#99}%time%%{F-} %percentage%%
 label-discharging =  %percentage%%
 
 
-; Available tokens:
-;   %percentage% (default)
+; %percentage% (default)
 label-full = %percentage%%
 
 ; Only applies if <ramp-capacity> is used
@@ -647,52 +251,82 @@ animation-discharging-3 = 
 animation-discharging-4 = 
 animation-discharging-framerate = 750
 
-[module/temperature]
-type = internal/temperature
+
+[module/date]
+type = internal/date
 
 ; Seconds to sleep between updates
-; Default: 1
-interval = 2
+interval = 1.0
 
-; Thermal zone to use
-; To list all the zone types, run
-; $ for i in /sys/class/thermal/thermal_zone*; do echo "$i: $(<$i/type)"; done
-; Default: 0
-thermal-zone = 0
+; NOTE: if you want to use syntax tags here you need to use %%{...}
+;date = %%{F#99}%d-%m-%Y%%{F-}
+;date = %Y-%m-%d%
+date = %%{F#fff}%A, %d %B %Y
 
-; Threshold temperature to display warning label (in degrees celsius)
-; Default: 80
-warn-temperature = 60
+; Optional time format
+;time = %%{F#fff}%H:%M%%{F-}
+;time = %H:%M%
+time =  %%{F#fff}%H:%M%%{F#666}
 
-; Available tags:
 ;   <label> (default)
-;   <ramp>
-format = <ramp> <label>
+format =  <label>
 
-; Available tags:
-;   <label-warn> (default)
-;   <ramp>
-format-warn = <ramp> <label-warn>
+;   %date%, %time%
+label = %date% %time%
 
-; Available tokens:
-;   %temperature% (deprecated)
-;   %temperature-c%   (default, temperature in °C)
-;   %temperature-f%   (temperature in °F)
-label = %temperature-c%
 
-; Available tokens:
-;   %temperature% (deprecated)
-;   %temperature-c%   (default, temperature in °C)
-;   %temperature-f%   (temperature in °F)
-label-warn = %temperature-c%
-label-warn-foreground = #f00
+[module/i3]
+type = internal/i3
 
-; Requires the <ramp> tag
-; The icon selection will range from 0 to `warn-temperature`
-; with the current temperature as index.
-ramp-0 = 
-ramp-1 = 
-ramp-2 = 
-ramp-3 = 
-ramp-4 = 
-ramp-5 = 
+pin-workspaces = true
+strip-wsnumbers = true
+index-sort = true
+
+; Use fuzzy (partial) matching on labels when assigning
+; icons to workspaces
+fuzzy-match = true
+
+ws-icon-0 = 1;♚
+ws-icon-1 = 2;♛
+ws-icon-2 = 3;♜
+ws-icon-3 = 4;♝
+ws-icon-4 = 5;♞
+ws-icon-default = ♟
+
+label-dimmed-underline = ${root.background}
+
+;   <label-state> (default) - gets replaced with <label-(focused|unfocused|visible|urgent)>
+;   <label-mode> (default)
+format = <label-state> <label-mode>
+
+;   %mode%
+label-mode = %mode%
+label-mode-padding = 0
+label-mode-background = #e60053
+
+;   %name%, %icon%, %index%, %output%
+label-focused =  %index%
+label-focused-foreground = #f1f1f1
+label-focused-background = #3D3440
+label-focused-underline = #fba922
+label-focused-padding = 4
+
+;   %name%, %icon%, %index%, %output%
+label-unfocused = %index%
+label-unfocused-padding = 4
+
+;   %name%, %icon%, %index%, %output%
+label-visible = %index%
+label-visible-underline = #555555
+label-visible-padding = 4
+
+;   %name%, %icon%, %index%, %output%
+label-urgent = %index%
+label-urgent-foreground = #000000
+label-urgent-background = #bd2c40
+label-urgent-padding = 4
+
+; Separator in between workspaces
+;label-separator = |
+;label-separator-padding = 0
+;label-separator-foreground = #D1D1D1
