--- a/.config/i3/config
+++ b/.config/i3/config
@@ -6,7 +6,7 @@
 #  I3 Configuration
 
 set $mod Mod4
-set $browser google-chrome-stable
+set $browser firefox
 set $terminal urxvt
 
 
@@ -14,10 +14,10 @@ set $terminal urxvt
 #....@;d'w   Colors
 
 # Color variables
-set $bg-color 	         #000000
-set $inactive-bg-color   #000000
-set $text-color          #D1D1D1
-set $inactive-text-color #676E7D
+set $bg-color 	         #2c1747
+set $inactive-bg-color   #1A0D2A
+set $text-color          #FFFFFF
+set $inactive-text-color #FFFFFF
 set $urgent-bg-color     #E53935
 
 #
@@ -43,7 +43,7 @@ client.urgent           $urgent-bg-color    $urgent-bg-color   $text-color      
 exec --no-startup-id nitrogen --restore
 
 # Disable window titlebars
-for_window [class="^.*"] border pixel 1
+#for_window [class="^.*"] border pixel 1
 for_window [class="^.*"] floating disable
 
 # NetworkManager nm-applet
@@ -54,7 +54,11 @@ exec --no-startup-id "setxkbmap us,gr -option 'grp:lalt_lshift_toggle'"
 exec --no-startup-id "gxkb"
 
 # Font
-font pango:monospace 11
+font pango:Roboto 11
+
+
+# Window title alignment
+title_align left
 
 
 ####^^^^^^^^^####^^^^^^^^^####
