--- a/.config/i3/config
+++ b/.config/i3/config
@@ -36,6 +36,9 @@ client.urgent           $urgent-bg-color    $urgent-bg-color   $text-color      
 ############| Startup Executions |##################
 ############|____________________|##################
 
+# autostart redshift
+#exec --no-startup-id redshift-gtk
+
 
 # Xfce4 power manager
 #exec_always --no-startup-id xfce4-power-manager
